test/TestPhases/causality/valid/dualAbortMinimal.blc
const C_LIM: int32 = 7
const D_LIM: int32 = 5

activity A()(c: int32,d: int32)
    when c > C_LIM abort
        when d > D_LIM abort
            cobegin 
                await true
                c = c + 1
            with
                await true
                d = d + 1
            end
        end
    end
end

@[EntryPoint]
activity E()
    var x: int32 = 0
    var y: int32 = 0
    run A()(x, y)
end