test/TestPhases/causality/invalid/Singleton7.blc
@[CFunction(binding="",header="")]
extern singleton function g()
    

function f()
    g()
end

function h() returns nat8
    g()
    return 7
end

activity B(x: nat8)
    await true
end

@[EntryPoint]
activity A()
    cobegin
        run B(h())
        
    with
        await true
        f()
    end
end